Added a placeholder for the relaxation dispersion citation to the citation chapter of the manual.
The bibtex entry for this will need to be updated later once the citation is published.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -5139,6 +5139,13 @@
   doi = {10.1016/j.pnmrs.2010.12.003}
 }
 
+@Article{Morin14,
+  author = {Morin, S. et al.},
+  title = {relax: the analysis of biomolecular kinetics using {NMR} relaxation dispersion data},
+  journal = {In press},
+  year = {2014}
+}
+
 @Article{MorinGagne09a,
   author = {Morin, S. and Gagn{\'e}, S.},
   affiliation = {Université Laval Département de Biochimie et de Microbiologie and PROTEO Bureau 3252, 1030 Avenue de la Médecine Québec QC G1V 0A6 Canada},
