--- a/docs/latex/citations.tex
+++ b/docs/latex/citations.tex
@@ -153,6 +153,18 @@ The base citations for reduced spectral density mapping are:
 \end{itemize}
 
 
+% Relaxation dispersion.
+%~~~~~~~~~~~~~~~~~~~~~~~
+
+\subsection*{Relaxation dispersion references}
+
+For the base citations for relaxation dispersion, please see chapter~\ref{ch: relax-disp} on page~\pageref{ch: relax-disp} for a listing of the individual models.  The main citation is:
+
+\begin{itemize}
+\item \bibentry{Morin14}
+\end{itemize}
+
+
 
 % Generic parts of relax.
 %%%%%%%%%%%%%%%%%%%%%%%%%
