Simplified the first 'MQ CR72' dispersion model formula in the manual.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -781,7 +781,7 @@ It is selected by setting the model to `MQ CR72'.
 The simple constraint $\pA > \pB$ is used to halve the optimisation space, as both sides of the limit are mirror image spaces.
 The equation for the exchange process is 
 \begin{equation}
-    \Rtwoeff = \Re(\lambda_1) - \frac{\nucpmg}{n}\ln(Q),
+    \Rtwoeff = \Re(\lambda_1) - \frac{1}{T_\textrm{relax}}\ln(Q),
 \end{equation}
 
 where
